<resources>
    <string name="back">Back</string>
    <!-- Home -->
    <string name="search">Search</string>
    <string name="search_description">What are you looking for?</string>
    <string name="clear_search_description">Clear search</string>
    <string name="search_in_meli">Search in Meli</string>
    <string name="empty_products">Ups! We didn\'t find anything.</string>
    <string name="image_description">Product image</string>

    <!-- Detail -->
    <string name="add_quantity">Add</string>
    <string name="not_stock">Not stock</string>
    <string name="available">(%1$s available)</string>
    <string name="type_quantity">Type quantity</string>
    <string name="more_than">More than %1$d</string>
    <string name="quantity_unit">More than %1$d</string>
    <plurals name="quantity_unit">
        <item quantity="one">%1$d unit</item>
        <item quantity="other">%1$d units</item>
    </plurals>
    <string name="choose_quantity">Choose quantity</string>
    <string name="product_added">Product added!</string>
    <string name="detail_title">Detail</string>
    <string name="free_shipping">Free shipping</string>
    <string name="available_stock">Available stock</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="buy_now">Buy now</string>
    <string name="error_description">An error occurred fetching the description, please try again later.</string>
    <string name="error_fetching_data">Ups! An error happened fetching more data.</string>
</resources>