...
@Preview
fun SearchContentPreview() {
    Search(text = "", onTextChange = {}, onClearSearch = {}, onSearch = {}, onCloseSearch = {})
}

object SearchTestTags {
    const val CONTAINER = "SearchContainer"
    const val INPUT = "SearchInput"
    const val INPUT_CLOSE_BUTTON = "InputCloseButton"
}
